@@ -1431,6 +1431,30 @@ list of modifier symbols."
 		   :code (xlib:keysym->keycodes *display* (key-keysym key))
 		   :state (x11-mods key)))
 
+(defun send-fake-click (win button)
+  "Send a fake key event to win. ch is the character and mods is a
+list of modifier symbols."
+  ;; I don't know why this doesn't work. Sadly CLX doesn't have the
+  ;; XTest extension like xlib does. With it this would be 2 lines.
+  (multiple-value-bind (x y) (xlib:query-pointer (window-xwin win))
+    (multiple-value-bind (rx ry) (xlib:query-pointer (screen-root (window-screen win)))
+      (xlib:send-event (window-xwin win) :button-press (xlib:make-event-mask :button-press)
+		       :display *display*
+		       :root (screen-root (window-screen win))
+		       :window (window-xwin win) :event-window (window-xwin win)
+		       :code button
+		       :state 0
+		       :x x :y y :root-x rx :root-y ry
+		       :same-screen-p t)
+      (xlib:send-event (window-xwin win) :button-release (xlib:make-event-mask :button-release)
+		       :display *display*
+		       :root (screen-root (window-screen win))
+		       :window (window-xwin win) :event-window (window-xwin win)
+		       :code button
+		       :state #x100
+		       :x x :y y :root-x rx :root-y ry
+		       :same-screen-p t))))
+
 
 ;;; Pointer helper functions
 
